2011-05-02  Karl Berry  <karl@tug.org>

	* openclose.c (recorder_change_filename): take output_directory
	into account.  Report/patch from 
	Philipp Stephani, 30 Apr 2011 16:11:53,
	http://tracker.luatex.org/view.php?id=615

2011-04-28  Karl Berry  <karl@tug.org>

	* printversion.c (printversionandexit): it is 2011.

2011-04-27  Karl Berry  <karl@tug.org>

	* texmfmp.c (initscreen): do not mention mfw, which is no more.
	Suggestion from Reinhard Kotucha, tex-k mail 21 Jul 2010 11:40:36.

2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	texmfmp.c (input_line): Caat input_line2() arg2 to 'char *'.

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* setupvar.c (setupboundvariable): `program_invocation_name' has
	been renamed into `kpse_invocation_name'.

2011-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (calledit): [__MINGW32__] Drop win32_system() and
	use system() as for all other systems.

2010-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reorganize web2c headers.
	* alloca.c, basechsuffix.c, chartostring.c, coredump.c,
	eofeoln.c, fprintreal.c, input2int.c, inputint.c, main.c,
	openclose.c, printversion.c, setupvar.c, uexit.c, usage.c,
	zround.c:
	#include <w2c/config.h> instead of <config.h> or "config.h".
	* version.c: #include <w2c/c-auto.h> instead of "c-auto.h".

2010-06-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: include kpathsea/concatn.h if WIN32 is defined.

2010-06-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: include kpathsea/concatn.h and remove cast
	for concatn ().

2010-05-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: on win32, all restricted shell escape commands are
	executed by fullpath.

2010-05-18  Karl Berry  <karl@tug.org>

	* printversion.c (printversionandexit): 2010.

2010-05-10  Karl Berry  <karl@tug.org>

	* input2int.c (zinput2ints, zinput3ints): don't bother
	to cast result of fprintf.
