@@ -82,16 +82,31 @@ recorder_change_filename (string new_name)
    if (!recorder_file)
      return;
 
+   /* On windows, an opened file cannot be renamed. */
+#if defined(WIN32)
+   fclose (recorder_file);
+#endif
+
    /* If an output directory was specified, use it.  */
    if (output_directory) {
      temp = concat3(output_directory, DIR_SEP_STRING, new_name);
      new_name = temp;
    }
 
+   /* On windows, renaming fails if a file with new_name exists. */
+#if defined(WIN32)
+   remove (new_name);
+#endif
+
    rename(recorder_name, new_name);
    free(recorder_name);
    recorder_name = xstrdup(new_name);
-   
+
+   /* reopen the recorder file by FOPEN_A_MODE. */
+#if defined(WIN32)
+   recorder_file = fopen (recorder_name, FOPEN_A_MODE);
+#endif
+
    if (temp)
      free (temp);
 }
